fix width of GI Value column on small resolutions as default

--- a/components/GiDataTable/style.scss
+++ b/components/GiDataTable/style.scss
@@ -9,6 +9,7 @@ th.gi-data-table__gi-column {
   white-space: nowrap;
   text-align: center;
   padding: 0;
+  width: 100px;
   @include respond-to(tablet) {
     width: 150px;
   }
