--- a/css/variables.scss
+++ b/css/variables.scss
@@ -11,7 +11,7 @@ $lightest: #ede9ef;
 
 $low-gi: #31c931;
 $medium-gi: #0f84e8;
-$high-gi: #c9362f;
+$high-gi: #e42920;
 
 // ******************************
 // *** responsive breakpoints ***
